--- a/index.html
+++ b/index.html
@@ -13,7 +13,19 @@
     <div id='main-content'>
         <div id='main-title'>AI MOCK INTERVIEW SYSTEM</div>
         <div id='sub-description'>AI 모의 면접 트레이닝을 통해 당신의 면접을 함께 준비해드리겠습니다</div>
+        <div id='button-section'>
+            <div class='button-item'>
+                <button class='button-style' onclick="moveIntroPage()">Introduction</button>
+            </div>
+            <div class='button-item'>
+                <button class='button-style' onclick="moveInterviewPage()">Interview Start</button>
+            </div>
+            <div class='button-item'>
+                <button class='button-style' onclick="moveJobInfoPage()">Other Job Infos</button>
+            </div>
+        </div>
     </div>
+    <script src='./assets/js/index.js'></script>
 </body>
 
 </html>
