--- a/InterviewPage.html
+++ b/InterviewPage.html
@@ -18,6 +18,7 @@
         <div id='question-contents'>
             <div id='question-contents-title'>면접 질문 리스트 확인하기</div>
         </div>
+        <button id='start-button' onclick="location.href='./InterviewTutorial.html'">모의 면접 시작하기</button>
     </div>
 </body>
 
