tutorial slidebox 1, 2 add

--- a/InterviewTutorial.html
+++ b/InterviewTutorial.html
@@ -21,10 +21,16 @@
             <div id='tutorial-content'>
                 <ul id='slidebox'>
                     <li>
-                        주의사항1
+                        <div class='slide-text'>얼굴 전체가 화면에 들어오게 캠을 조정하세요</div>
+                        <img class='img-style' id='face-img1' src="./assets/images/face1.png" alt="FACE1">
+                        <div class='slide-text'>너무 가깝거나 멀다면 얼굴 식별이 힘들 수 있어요!</div>
                     </li>
                     <li>
-                        주의사항2
+                        <div class='slide-text'>얼굴 전체가 나오더라도 측면을 비추는 방향으로 캠을 두지 마십시오</div>
+                        <div>
+                            <img class='img-style' src="./assets/images/sideface1.svg" alt="SIDEFACE1">
+                            <img class='img-style' src="./assets/images/sideface2.svg" alt="SIDEFACE2">
+                        </div>
                     </li>
                     <li>
                         주의사항3
