--- a/InterviewPage.html
+++ b/InterviewPage.html
@@ -8,7 +8,7 @@
     <title>AI MOCK INTERVIEW SYSTEM</title>
     <link rel="stylesheet" href="./assets/css/InterviewPage.css">
     <script src="./assets/js/InterviewPage.js" type="module"></script>
-    <script src="//code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script src="./assets/js/jquery-3.6.0.min.js"></script>
 </head>
 
 <body>
