--- a/InterviewTutorial.html
+++ b/InterviewTutorial.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI MOCK INTERVIEW SYSTEM</title>
     <link rel="stylesheet" href="./assets/css/InterviewTotorial.css">
-    <script src="//code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script src="./assets/js/jquery-3.6.0.min.js"></script>
     <script src="./assets/js/InterviewTutorial.js"></script>
 </head>
 
