--- a/InterviewSetting.html
+++ b/InterviewSetting.html
@@ -23,6 +23,9 @@
             <button id='stop-button' class='button-style' onclick="onRecordStop()">Stop</button>
             <button id='stop-button' class='button-style' onclick="onPlay()">녹화내용 확인</button>
         </div>
+        <div>
+            <button id='next-button' class='button-style' onclick="location.href='./InterviewStart.html'">세팅 완료</button>
+        </div>
     </div>
     <script src="assets/js/InterviewSetting.js"></script>
 </body>
