--- a/InterviewStart.html
+++ b/InterviewStart.html
@@ -33,7 +33,7 @@
             </div>
         </div>
     </div>
-    <button id='start-btn'>START</button>
+    <button id='start-btn' onclick="location.href='./ActualInterview.html?problemnum=1'">START</button>
 </body>
 
 </html>
