interview process finish

--- a/ActualInterview.html
+++ b/ActualInterview.html
@@ -20,6 +20,8 @@
                 <div>
                     <button id='play-btn' class="btn-style">녹화본 재생</button>
                     <button id='re-record-btn' class="btn-style">재답변</button>
+                    <button id='next-btn' class="btn-style">다음 문제</button>
+                    <button id='interview-fin-btn' class="btn-style">면접 끝내기</button>
                 </div>
             </div>
             <video autoplay muted id='record-screen'></video>
