--- a/InterviewPage.html
+++ b/InterviewPage.html
@@ -14,7 +14,7 @@
 <body>
     <div id='main-contents'>
         <div id='main-title'>AI 모의 면접 시작하기</div>
-        <div id='sub-desc'>본 면접은 사이트에서 준비한 질문 리스트 중 랜덤 선택되어 2개의 항목으로 진행됩니다</div>
+        <div id='sub-desc'>본 면접은 사이트에서 준비한 질문 리스트 중 랜덤 선택되어 진행됩니다</div>
         <div id='question-contents'>
             <div id='question-contents-title'>면접 질문 리스트 확인하기</div>
         </div>
