--- a/InterviewStart.html
+++ b/InterviewStart.html
@@ -11,7 +11,7 @@
 
 <body>
     <div id='desc-contents'>
-        <div>두 가지의 질문이 랜덤 선택되어 테스트를 시행합니다</div>
+        <div>질문이 랜덤 선택되어 테스트를 시행합니다. 다양한 질문에 답변해보세요</div>
         <div>답변 후 녹화본을 확인해 보며 답변 내용을 체크해보세요</div>
         <div>그럼 지금부터 AI 면접을 시작합니다</div>
     </div>
@@ -33,7 +33,7 @@
             </div>
         </div>
     </div>
-    <button id='start-btn' onclick="location.href='./ActualInterview.html?problemnum=1'">START</button>
+    <button id='start-btn' onclick="location.href='./ActualInterview.html'">START</button>
 </body>
 
 </html>
