Inroduction page complete

--- a/InterviewStart.html
+++ b/InterviewStart.html
@@ -13,7 +13,7 @@
     <div id='desc-contents'>
         <div>질문이 랜덤 선택되어 테스트를 시행합니다. 다양한 질문에 답변해보세요</div>
         <div>답변 후 녹화본을 확인해 보며 답변 내용을 체크해보세요</div>
-        <div>그럼 지금부터 AI 면접을 시작합니다</div>
+        <div>그럼 지금부터 AI 모의 면접을 시작합니다</div>
     </div>
     <div id='last-info'>
         <div id='info1' class='info-style'>
